# epiq_solutions_challenge

./: CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt  background_temp_monitor.cpp  ptm_demo.cpp  ptm_demo_multithreaded.cpp  ptm_driver.cpp  tmp125_driver_demo.cpp
include/: platform_temperature_monitor.hpp  tmp125_api.hpp
platform_temperature_monitor/: CMakeLists.txt
platform_temperature_monitor/include/: platform_temperature_monitor.hpp  tmp125_api.hpp
platform_temperature_monitor/src/: platform_temperature_monitor.cpp
src/: PTM_challenge_1_main.cpp  PTM_driver.cpp  platform_temperature_monitor.cpp  ptm_driver.cpp
test/: CMakeLists.txt  platform_temperature_monitor_unit_test.cpp  tmp125_driver_unit_test.cpp
tmp125_driver/: CMakeLists.txt
tmp125_driver/include/: gpio_lib.hpp  spi_interface.hpp  tmp125_driver.hpp
tmp125_driver/src/: main.cpp  spi_interface.cpp  tmp125_driver.cpp
